2014-06-30 Yavor Doganov  <yavor@gnu.org>

	* GNUmakefile: Use -include for deb.make (for backward compatibility
	with old versions of gnustep-make).
	* Documentation/GNUmakefile:
	* Documentation/General/GNUmakefile:
	* Source/DocMakefile:
	* Tools/DocMakefile:
	Flags alterations to build documentation before base/autogsdoc is
	installed.

2014-06-26 Riccardo Mottola <rm@gnu.org>

	* Headers/GNUstepBase/GSTypeEncoding.h
	* Headers/GNUstepBase/GSVersionMacros.h
	Substitute #import with #include so that the header can be used in
	a pure C file without gcc warnings.

2014-06-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSocketPortNameServer.m:
	* Source/NSMessagePortNameServer.m:
	Maps of ports to names modified to treat the ports as non owned
	pointers rather than non retained objects ... so we simply do
	pointer comparisons (faster and also safer if we are removing
	a port which is being deallocated).

2014-06-20  Richard Frith-Macdonald <rfm@gnu.org>

        * configure.ac: Temporarily add -O0 to turn off optimisation while
        checking for the need for shorts to be word-aligned ... should fix
        the case where the optimiser breaks the test by 'correcting' the
        misaligned access.
        * configure: regenerate

2014-06-19 Riccardo Mottola <rm@gnu.org>

	* Source/common.h
	Include and do not import pure-C header, guard against re-inclusion

2014-06-18 Riccardo Mottola <rm@gnu.org>

	* Source/unix/NSStream.m
	Add missing includes (in correct order) for open() on most OS,
	including Solaris.

2014-06-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: Fix buffer overrun.
	* Source/GSString.m: Fix uninitialised variable.
	Cure for bug #42483

2014-05-28  Manuel Guesdon <mguesdon@orange-concept.com>
	* Source/NSUndoManager.m
	  Assert sig is not null in registerUndoWithTarget:selector:object:

2014-05-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSInvocation.h:
	* Source/NSInvocation.m: